app/kumactl/cmd/install/testdata/install-transparent-proxy.excludedports.txt
### IPv4 ###

* nat
-N KUMA_MESH_INBOUND
-N KUMA_MESH_OUTBOUND
-N KUMA_MESH_INBOUND_REDIRECT
-N KUMA_MESH_OUTBOUND_REDIRECT
-A PREROUTING -p tcp -j KUMA_MESH_INBOUND
-I OUTPUT 1 -m multiport -p tcp --dport 1900,1902,1000:2000 -m owner --uid-owner 106:108 -j RETURN
-I OUTPUT 2 -m multiport -p tcp --dport 2900,2902,3000:5000 -m owner --uid-owner 203 -j RETURN
-I OUTPUT 3 -m multiport -p udp --dport 3900,3902,4000:6000 -m owner --uid-owner 303 -j RETURN
-A OUTPUT -p tcp -j KUMA_MESH_OUTBOUND
-A KUMA_MESH_INBOUND -p tcp -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -s subnetPlaceholder/mask -o ifPlaceholder -j RETURN
-A KUMA_MESH_OUTBOUND -p tcp -o ifPlaceholder ! -d subnetPlaceholder/mask -m owner --uid-owner 0 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -p tcp -o ifPlaceholder -m owner ! --uid-owner 0 -j RETURN
-A KUMA_MESH_OUTBOUND -m owner --uid-owner 0 -j RETURN
-A KUMA_MESH_OUTBOUND -d subnetPlaceholder/mask -j RETURN
-A KUMA_MESH_OUTBOUND -j KUMA_MESH_OUTBOUND_REDIRECT
-A KUMA_MESH_INBOUND_REDIRECT -p tcp -j REDIRECT --to-ports inboundPort
-A KUMA_MESH_OUTBOUND_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
